--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://www.w3schools.com/w3css/4/w3.css");
 @import url(font-awesome.min.css);
-@import url("http://fonts.googleapis.com/css?family=Roboto:500,300");
+@import url("https://fonts.googleapis.com/css?family=Roboto:500,300");
 
 /*
 	Ion by TEMPLATED
